--- a/Alexey/Vagrantfile
+++ b/Alexey/Vagrantfile
@@ -1,16 +1,16 @@
 Vagrant.configure(2) do |config|
 
-  config.vm.define "ansible" do |myconf|
-    myconf.vm.box = "centos/7"
-    myconf.vm.hostname = 'ansible.example.com'
+  config.vm.define "ansible" do |myconf1|
+    myconf1.vm.box = "centos/7"
+    myconf1.vm.hostname = 'ansible.example.com'
   end
 
- config.vm.define "centos" do |myconf|
-    myconf.vm.box = "centos/7"
-    myconf.vm.hostname = 'centos.example.com'
+ config.vm.define "centos" do |myconf2|
+    myconf2.vm.box = "centos/7"
+    myconf2.vm.hostname = 'centos.example.com'
   end
 
-  config.vm.define "ubunty" do |conf|
+  config.vm.define "ubuntu" do |conf|
     conf.vm.box = "ubuntu/xenial64"
     conf.vm.hostname = 'ubuntu.example.com'
   end
