--- a/Alexey/ansibleinstall/Vagrantfile
+++ b/Alexey/ansibleinstall/Vagrantfile
@@ -1,27 +1,10 @@
 
-#script for ansible deployment
-$script = <<SCRIPT
-echo script start
-sudo yum install epel-release -y
-echo start ansible installation
-sudo yum install ansible -y
-echo ansible is installed, installing git...
-sudo yum install git -y
-echo git installed, creating final stuff
-cd ~
-mkdir ./git
-cd ./git
-git init
-git clone https://github.com/neoncyrex/students.git
-SCRIPT
-
-
 Vagrant.configure(2) do |config|
 
   config.vm.define "ansible" do |myconf1|
     myconf1.vm.box = "centos/7"
     myconf1.vm.hostname = 'ansible.example.com'
-    myconf1.vm.provision "shell", inline: $script, privileged: false
+    myconf1.vm.provision "shell", path: "centos-deployment.sh", privileged: false
   end
 
  config.vm.define "centos" do |myconf2|
