--- a/evgeny/ansibleinstall/inventory/Vagrantfile
+++ b/evgeny/ansibleinstall/inventory/Vagrantfile
@@ -19,6 +19,12 @@ Vagrant.configure(2) do |config|
       sudo yum install -y epel-release
 #      sleep 10
       sudo yum install -y ansible
+      sudo mkdir /home/devops/ansible
+      sudo rsync -a /etc/ansible/ /home/devops/ansible
+      sudo chown -fR devops:devops /home/devops/ansible
+      sudo mv /home/devops/ansible/hosts /home/devops/ansible/inventory
+      sudo cp /home/devops/ansible/ansible.cfg /home/devops/ansible/ansible.cfg.orig
+      sudo sed -i 's/^\#timeout = 10/timeout \= 60/g' /home/devops/ansible/ansible.cfg
     SHELL
   end
  
