--- a/evgeny/ansibleinstall/inventory/Vagrantfile
+++ b/evgeny/ansibleinstall/inventory/Vagrantfile
@@ -22,7 +22,19 @@ Vagrant.configure(2) do |config|
       sudo chown -fR devops:devops /home/devops/ansible
       sudo mv /home/devops/ansible/hosts /home/devops/ansible/inventory
       sudo cp /home/devops/ansible/ansible.cfg /home/devops/ansible/ansible.cfg.orig
+#      sudo sed -i 's/^#inventory \= \/etc\/ansible\/hosts\/host/ inventory\=\/home\/devops\/ansible\/inventory/g' /home/devops/ansible/ansible.cfg
+      sudo sed -i 's/^\#inventory /inventory /g' /home/devops/ansible/ansible.cfg
+      sudo sed -i 's/ \/etc\/ansible\/hosts$/\/home\/devops\/ansible\/inventory /g' /home/devops/ansible/ansible.cfg 
       sudo sed -i 's/^\#timeout = 10/timeout \= 60/g' /home/devops/ansible/ansible.cfg
+      echo "echo [examservers] >> /home/devops/ansible/inventory" >/tmp/1.sh
+      echo "echo centos1.example.com.local >> /home/devops/ansible/inventory" >>/tmp/1.sh 
+      echo "echo centos2.example.com.local >> /home/devops/ansible/inventory" >>/tmp/1.sh
+      echo "echo [ansiblehosts] >> /home/devops/ansible/inventory" >>/tmp/1.sh
+      echo "echo ansible.example.com.local >> /home/devops/ansible/inventory" >>/tmp/1.sh
+      echo "echo [hakers] >> /home/devops/ansible/inventory" >>/tmp/1.sh
+      echo "echo centos2.example.com.local >> /home/devops/ansible/inventory" >>/tmp/1.sh
+      sudo chmod +x /tmp/1.sh
+      sudo /tmp/1.sh
     SHELL
   end
  
@@ -31,6 +43,7 @@ Vagrant.configure(2) do |config|
     dos.vm.hostname = 'centos1.example.com'
     dos.vm.network "private_network", ip: "172.28.128.16"
     dos.vm.provision "shell", inline: $upeth1
+#    dos.vm.synced_folder "/home/111", "/vagrant_home"
     dos.vm.provision "shell", inline: <<-SHELL
       sudo useradd mgmt -m
       sudo echo "Ansible123" | passwd "mgmt" --stdin
