--- a/evgeny/adhoc/Vagrantfile
+++ b/evgeny/adhoc/Vagrantfile
@@ -15,6 +15,8 @@ Vagrant.configure(2) do |config|
       sudo cp /vagrant/ansible.inventory /var/ansible.inventory
       sudo cp /vagrant/ansible.cfg /home/ansibleadmin/
       sudo cp /vagrant/sshd_config /etc/ssh/sshd_config
+      sudo cp /vagrant/runme.sh /home/vagrant/runme.sh
+      sudo cp /vagrant/ansibleadmin /etc/sudoers.d/ansibleadmin
       sudo systemctl restart sshd
     SHELL
   end
@@ -27,10 +29,13 @@ Vagrant.configure(2) do |config|
     dos.vm.provision "shell", inline: <<-SHELL
       sudo useradd myuser -m
       sudo echo "Ansible123" | passwd "myuser" --stdin
+      sudo useradd ansible -m
+      sudo echo "Ansible123" | passwd "ansible" --stdin
       sudo yum install -y epel-release
       sudo yum install -y ansible
       sudo yum install -y git
       sudo cp /vagrant/sshd_config /etc/ssh/sshd_config
+      sudo cp /vagrant/myuser /etc/sudoers.d/myuser
       sudo systemctl restart sshd
     SHELL
   end
