--- a/sergey/ansible_playbooks_lab/httpd.yml
+++ b/sergey/ansible_playbooks_lab/httpd.yml
@@ -30,7 +30,7 @@
     - lineinfile:
         path: /var/www/html/index.html
         insertafter: EOF
-        line: 'Hellow from Sergey'
+        line: 'Hello from Sergey'
       notify: restart httpd
 
     - name: install firewalld
