lab 18 (jinja2) update

--- a/sergey/jinja2/setup_backend.yml
+++ b/sergey/jinja2/setup_backend.yml
@@ -1,7 +1,7 @@
 ---
 - name: isntall and start nginx on backend group
   become: true
-  hosts: backend
+  hosts: backends
   tasks:
     - name: install epel-release repo
       yum:
