--- a/sergey/jinja2/setup_frontend.yml
+++ b/sergey/jinja2/setup_frontend.yml
@@ -1,49 +1,45 @@
 ---
 - name: install and start haproxy on frontend group
-  hosts: allhosts
+  hosts: frontends 
   become: true
   tasks:
-    - block:
-      - name: install haproxy
-        yum:
-          name: haproxy
-          state: installed
-          
-      - name: start and enable haproxy
-        service:
-          name: haproxy
-          state: started
-          enabled: yes
+    - name: install haproxy
+      yum:
+        name: haproxy
+        state: installed
         
-      - name: copy /etc/haproxy/haproxy.cfg file
-        template:
-          src: ./templates/haproxy.cfg.j2
-          dest: /etc/haproxy/haproxy.cfg
-        notify: restart haproxy
+    - name: start and enable haproxy
+      service:
+        name: haproxy
+        state: started
+        enabled: yes
         
-      - name: install firewalld
-        yum:
-          name: firewalld
-          state: installed
+    - name: copy /etc/haproxy/haproxy.cfg file
+      template:
+        src: ./templates/haproxy.cfg.j2
+        dest: /etc/haproxy/haproxy.cfg
+      notify: restart haproxy
         
-      - name: start and enable firewalld
-        service:
-          name: firewalld
-          state: started
-          enabled: yes
+    - name: install firewalld
+      yum:
+        name: firewalld
+        state: installed
         
-      - name: open port 80
-        firewalld:
-          service: http
-          permanent: true
-          state: enabled
-          immediate: true
-          
-      when: inventory_hostname in groups['frontend']
-    
+    - name: start and enable firewalld
+      service:
+        name: firewalld
+        state: started
+        enabled: yes
+        
+    - name: open port 80
+      firewalld:
+        service: http
+        permanent: true
+        state: enabled
+        immediate: true
+
   handlers:
     - name: restart haproxy
       service:
         name: haproxy
         state: restarted
-      when: inventory_hostname in groups['frontend']
