--- a/Alexey/roles-2/ansible-configs/roles/mariadb/vars/main.yml
+++ b/Alexey/roles-2/ansible-configs/roles/mariadb/vars/main.yml
@@ -1,3 +1,5 @@
 ---
-name_user: 'bob'
-password_user: 'bob'
+name_user: 'prod'
+password_user: 'AnsibleCoursePwd'
+db_name: 'proddb'
+db_admin_password: "Ansible123"
