--- a/sergey/roles2/roles/hardening/tasks/main.yml
+++ b/sergey/roles2/roles/hardening/tasks/main.yml
@@ -2,4 +2,5 @@
 - include: setup_firewalld.yml
 - include: setup_selinux.yml
 - include: setup_dns.yml
+- include: setup_hostname.yml
 - include: setup_hosts.yml
