exam3 errors fix

--- a/sergey/exam3/playbooks/galaxy_install.yml
+++ b/sergey/exam3/playbooks/galaxy_install.yml
@@ -14,5 +14,5 @@
     - name: check ansible.cfg
       lineinfile:
         path: /home/ansible/ansible.cfg
-        line: "roles = /home/ansible/playbooks/roles"
+        line: "roles_path = /home/ansible/playbooks/roles"
         state: present
